Fixes #14348: Add visibility styles to collapse and tab content to match .hidden

--- a/less/component-animations.less
+++ b/less/component-animations.less
@@ -17,8 +17,9 @@
 
 .collapse {
   display: none;
+  visibility: hidden;
 
-  &.in      { display: block; }
+  &.in      { display: block; visibility: visibile; }
   tr&.in    { display: table-row; }
   tbody&.in { display: table-row-group; }
 }
